# Mobigreen-Project---SQL

./: .env.example  .gitignore  Dockerfile  ERDiagram.puml  README.md  diagram-mobigreen.puml  docker-compose.yml  pyproject.toml  requirements.txt  test_injection_seguro.py  test_injection_vulneravel.py
docs/: backup-restore.md  incident-simulation.md
init/: 00_postgresql.conf  02_schema.sql
notebooks/: Notebook 01.ipynb  Notebook 02.ipynb  Notebook 03.ipynb  Notebook 04.ipynb  apprenant_01_psycopg2.ipynb  apprenant_02_pandas.ipynb  apprenant_03_sqlalchemy_intro.ipynb
notebooks/.virtual_documents/: Untitled.ipynb
scripts/: backup.sh  delete_user.py  demo.py  restore.sh  update_pseudonyms.py
src/: config.py
src/mobigreen/: __init__.py  config.py  database.py  models.py  seed.py
src/mobigreen/repositories/: __init__.py  base_repository.py  donnee_meteo_repository.py  incident_repository.py  mesure_air_repository.py  station_repository.py  trajet_analytics_repository.py  trajet_repository.py  usager_repository.py  vehicule_repository.py
tests/: conftest.py  test_example.py  test_pgcrypto.py  test_pseudo_repository.py  test_station_repository.py  test_usager_repository.py
