[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobigreen"
version = "0.1.0"
description = "Librairie Python d'accès à la base MobiGreen Urban — Module SQL Data Engineer"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
notebooks = ["pandas>=2.0", "matplotlib>=3.7", "jupyter>=1.0", "ipykernel>=6.0", "python-dotenv>=1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
