[project]
name = "mobigreen"
version = "0.1.0"
description = "Package MobiGreen Urban - SQLAlchemy ORM + Repositories"
authors = [
    { name = "Natalia Ferreira" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"